# apk_runner

./: .gitignore  Cargo.toml  README.md  apkrun.sh
.cargo/: config.toml
Androlon/: Package.swift
Androlon/Sources/AndrolonEngine/: AdbService.swift  EmulatorService.swift  EngineError.swift  GpuBackend.swift  Models.swift  SdkConfig.swift  Subprocess.swift
Androlon/Sources/androlonctl/: main.swift
crates/androlon-app/: Cargo.toml
crates/androlon-app/src/: app.rs  avlayer.rs  input.rs  keymap.rs  lib.rs  main.rs  ui.rs  video.rs
crates/androlon-core/: Cargo.toml
crates/androlon-core/src/: adb.rs  appify.rs  backend.rs  config.rs  emulator.rs  error.rs  lib.rs  model.rs  subprocess.rs  waydroid.rs
crates/androlon-ctl/: Cargo.toml
crates/androlon-ctl/src/: appify.rs  main.rs
crates/androlon-hub/: Cargo.toml
crates/androlon-hub/src/: main.rs  ui.rs
crates/androlon-installer/: Cargo.toml
crates/androlon-installer/src/: main.rs  opendoc.rs  wizard.rs
crates/androlon-ipc/: Cargo.toml
crates/androlon-ipc/src/: json.rs  lib.rs
crates/androlon-player/: Cargo.toml
crates/androlon-player/src/: app.rs  avlayer.rs  keymap.rs  lib.rs  video.rs
crates/androlon-runtimed/: Cargo.toml
crates/androlon-runtimed/src/: main.rs
crates/androlon-stream/: Cargo.toml
crates/androlon-stream/src/: control.rs  decode.rs  encode.rs  error.rs  lib.rs  model.rs  samplebuffer.rs  scrcpy.rs  session.rs  videotoolbox.rs
crates/androlon-uninstaller/: Cargo.toml
crates/androlon-uninstaller/src/: main.rs
docs/: suite-architecture.md
