[workspace]
resolver = "2"
members = [
    "crates/androlon-core",
    "crates/androlon-ctl",
    "crates/androlon-stream",
    "crates/androlon-app",
    "crates/androlon-ipc",
    "crates/androlon-runtimed",
    "crates/androlon-installer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Androlon"]

[profile.release]
lto = true
